--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-eslint": "^0.13",
     "gulp-filter": "^2.0",
     "gulp-flatten": "0.0.4",
+    "gulp-gh-pages": "^0.5.2",
     "gulp-if": "^1.2",
     "gulp-imagemin": "^2.2",
     "gulp-load-plugins": "^0.10",
