--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "gilbarbara.github.io",
   "version": "0.2.0",
+  "author": "Gil Barbara <gilbarbara@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gilbarbara/resume"
+  },
+  "homepage": "http://gilbarbara.github.io/resume/",
   "devDependencies": {
     "apache-server-configs": "^2.14",
+    "babelify": "^6.1.2",
     "browser-sync": "^2.7",
+    "browserify": "^10.2.4",
     "connect": "^3.3",
     "del": "^1.2",
     "gulp": "^3.9",
@@ -22,12 +30,17 @@
     "gulp-rename": "^1.2",
     "gulp-sass": "^2.0",
     "gulp-size": "^1.2",
+    "gulp-tap": "^0.1.3",
     "gulp-uglify": "^1.2",
     "gulp-useref": "^1.2",
     "gulp-util": "^3.0",
+    "jquery": "^2.1.4",
     "main-bower-files": "^2.8",
     "merge-stream": "^0.1",
     "run-sequence": "^1.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.2",
     "wiredep": "^2.2"
   },
   "engines": {
