--- a/.eslintrc
+++ b/.eslintrc
@@ -18,12 +18,18 @@
     "amd": true,
     "browser": true,
     "jquery": true,
+    "mocha": true,
     "node": true
   },
   "globals": {
     "$": true,
-    "Modernizr": false
+    "d3": true,
+    "Modernizr": false,
+    "module": false
   },
+  "plugins": [
+    "react"
+  ],
   "rules": {
     "strict": 0,
 
@@ -133,7 +139,7 @@
     "consistent-this": [1, "self"],
     "eol-last": 1,
     "key-spacing": 1,
-    "linebreak-style": "unix",
+    "linebreak-style": [1, "unix"],
     "max-nested-callbacks": [2, 4],
     "new-cap": 2,
     "new-parens": 2,
@@ -191,7 +197,25 @@
     "space-unary-ops": 1,
 
     // Node
+    "no-mixed-requires": 0,
 
-    "no-mixed-requires": 0
+    // React
+    "react/jsx-quotes": [
+      1,
+      "double"
+    ],
+    "react/jsx-no-undef": 1,
+    "react/jsx-sort-props": 0,
+    "react/jsx-sort-prop-types": 1,
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+    "react/no-did-mount-set-state": 0,
+    "react/no-did-update-set-state": 1,
+    "react/no-multi-comp": 1,
+    "react/no-unknown-property": 1,
+    "react/prop-types": 1,
+    "react/react-in-jsx-scope": 1,
+    "react/self-closing-comp": 1,
+    "react/wrap-multilines": 1
   }
 }
