--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "browserify": "^10.2.4",
     "connect": "^3.3",
     "del": "^1.2",
+    "eslint": "^0.23.0",
+    "eslint-plugin-react": "^2.5.2",
     "gulp": "^3.9",
     "gulp-autoprefixer": "^2.3",
     "gulp-cache": "^0.2",
@@ -45,5 +47,8 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "react": "^0.13.3"
   }
 }
