--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^2.7",
     "browserify": "^10.2.4",
     "connect": "^3.4",
+    "connect-history-api-fallback": "^1.1.0",
     "del": "^1.2",
     "eslint": "^0.23.0",
     "eslint-plugin-react": "^2.5.2",
