--- a/.eslintrc
+++ b/.eslintrc
@@ -1,38 +1,25 @@
-
 {
+  "parser": "babel-eslint",
   "ecmaFeatures": {
-    "arrowFunctions": true,
-    "blockBindings": true,
-    "classes": true,
-    "defaultParams": true,
-    "destructuring": true,
-    "jsx": true,
     "modules": true,
-    "objectLiteralComputedProperties": true,
-    "objectLiteralShorthandMethods": true,
-    "objectLiteralShorthandProperties": true,
-    "spread": true,
-    "templateStrings": true
+    "experimentalObjectRestSpread": true
   },
   "env": {
     "amd": true,
     "browser": true,
-    "jquery": true,
+    "es6": true,
     "mocha": true,
     "node": true
   },
   "globals": {
     "$": true,
-    "d3": true,
-    "Modernizr": false,
-    "module": false
+    "Modernizr": false
   },
   "plugins": [
     "react"
   ],
   "rules": {
     "strict": 0,
-
     // Possible Errors
     "comma-dangle": 2,
     "no-cond-assign": 0,
@@ -42,7 +29,7 @@
     "no-dupe-keys": 2,
     "no-duplicate-case": 2,
     "no-empty": 2,
-    "no-empty-class": 2,
+    "no-empty-character-class": 2,
     "no-ex-assign": 2,
     "no-extra-boolean-cast": 1,
     "no-extra-parens": 0,
@@ -52,7 +39,6 @@
     "no-irregular-whitespace": 1,
     "no-obj-calls": 2,
     "no-regex-spaces": 2,
-    "no-reserved-keys": 1,
     "no-sparse-arrays": 2,
     "no-unreachable": 2,
     "valid-jsdoc": [
@@ -60,16 +46,21 @@
       {
         "prefer": {
           "return": "returns"
-        }
+        },
+        "requireParamDescription": false,
+        "requireReturn": false,
+        "requireReturnDescription": false
       }
     ],
     "valid-typeof": 2,
-
     // Best Practices
     "block-scoped-var": 1,
     "curly": 1,
     "default-case": 1,
-    "dot-location": [1, "property"],
+    "dot-location": [
+      1,
+      "property"
+    ],
     "dot-notation": 1,
     "eqeqeq": 1,
     "guard-for-in": 1,
@@ -80,7 +71,16 @@
     "no-extend-native": 2,
     "no-extra-bind": 1,
     "no-floating-decimal": 2,
+    "no-implicit-coercion": [
+      1,
+      {
+        "boolean": true,
+        "number": false,
+        "string": true
+      }
+    ],
     "no-implied-eval": 2,
+    "no-invalid-this": 1,
     "no-loop-func": 0,
     "no-multi-spaces": [
       1,
@@ -101,14 +101,20 @@
     "no-sequences": 2,
     "no-throw-literal": 2,
     "no-unused-expressions": 1,
+    "no-useless-concat": 1,
     "no-void": 2,
     "no-warning-comments": 0,
     "no-with": 1,
     "radix": 2,
     "vars-on-top": 0,
     "wrap-iife": 2,
-    "yoda": [2, "never", { "exceptRange": true }],
-
+    "yoda": [
+      2,
+      "never",
+      {
+        "exceptRange": true
+      }
+    ],
     // Variables
     "no-shadow": 1,
     "no-undef": 1,
@@ -121,7 +127,6 @@
       }
     ],
     "no-use-before-define": 2,
-
     // Stylistic Issues
     "brace-style": [
       1,
@@ -136,11 +141,28 @@
       1,
       "last"
     ],
-    "consistent-this": [1, "self"],
+    "consistent-return": 0,
+    "consistent-this": [
+      1,
+      "self"
+    ],
     "eol-last": 1,
     "key-spacing": 1,
-    "linebreak-style": [1, "unix"],
-    "max-nested-callbacks": [2, 4],
+    "lines-around-comment": [
+      0,
+      {
+        "beforeBlockComment": true,
+        "beforeLineComment": true
+      }
+    ],
+    "linebreak-style": [
+      1,
+      "unix"
+    ],
+    "max-nested-callbacks": [
+      2,
+      4
+    ],
     "new-cap": 2,
     "new-parens": 2,
     "newline-after-var": 0,
@@ -162,6 +184,10 @@
     "no-trailing-spaces": 1,
     "no-underscore-dangle": 0,
     "no-unneeded-ternary": 0,
+    "object-curly-spacing": [
+      1,
+      "always"
+    ],
     "one-var": 0,
     "padded-blocks": 0,
     "quote-props": [
@@ -183,30 +209,70 @@
     "space-after-keywords": 1,
     "space-before-blocks": 1,
     "space-before-function-paren": 1,
-    "space-in-brackets": [
-      0,
-      "always",
-      {
-        "singleValue": false,
-        "arraysInArrays": false,
-        "propertyName": false
-      }
-    ],
+    "space-before-keywords": 1,
     "space-infix-ops": 1,
     "space-return-throw-case": 1,
     "space-unary-ops": 1,
-
     // Node
-    "no-mixed-requires": 0,
-
-    // React
-    "react/jsx-quotes": [
+    "callback-return": [
       1,
-      "double"
+      [
+        "callback",
+        "cb",
+        "next"
+      ]
     ],
+    "handle-callback-err": 1,
+    "no-mixed-requires": 0,
+    //Es6
+    "arrow-parens": 0,
+    "arrow-spacing": [
+      1,
+      {
+        "before": true,
+        "after": true
+      }
+    ],
+    "constructor-super": 1,
+    "generator-star-spacing": [
+      1,
+      "after"
+    ],
+    "no-class-assign": 2,
+    "no-const-assign": 2,
+    "no-this-before-super": 2,
+    "no-var": 2,
+    "object-shorthand": [
+      1,
+      "always"
+    ],
+    "prefer-arrow-callback": 1,
+    "prefer-spread": 1,
+    "require-yield": 1,
+    // React
+    "jsx-quotes": 1,
+    "react/jsx-boolean-value": [
+      0,
+      "always"
+    ],
+    "react/jsx-closing-bracket-location": [
+      1,
+      "after-props"
+    ],
+    "react/jsx-curly-spacing": [
+      1,
+      "never"
+    ],
+    "react/jsx-max-props-per-line": [
+      1,
+      {
+        "maximum": 4
+      }
+    ],
+    "react/jsx-no-duplicate-props": 1,
     "react/jsx-no-undef": 1,
-    "react/jsx-sort-props": 0,
     "react/jsx-sort-prop-types": 1,
+    "react/jsx-sort-props": 0,
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
     "react/no-did-mount-set-state": 0,
@@ -215,7 +281,39 @@
     "react/no-unknown-property": 1,
     "react/prop-types": 1,
     "react/react-in-jsx-scope": 1,
+    //"react/require-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/self-closing-comp": 1,
+    "react/sort-comp": [
+      1,
+      {
+        "order": [
+          "constructor",
+          "lifecycle",
+          "everything-else",
+          "render"
+        ],
+        "groups": {
+          "lifecycle": [
+            "displayName",
+            "mixins",
+            "statics",
+            "contextTypes",
+            "childContextTypes",
+            "propTypes",
+            "getDefaultProps",
+            "getInitialState",
+            "getChildContext",
+            "shouldComponentUpdate",
+            "componentWillMount",
+            "componentDidMount",
+            "componentWillUnmount",
+            "componentWillReceiveProps",
+            "componentWillUpdate",
+            "componentDidUpdate"
+          ]
+        }
+      }
+    ],
     "react/wrap-multilines": 1
   }
 }
