--- a/package.json
+++ b/package.json
@@ -1,55 +1,79 @@
 {
   "name": "gilbarbara.github.io",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "author": "Gil Barbara <gilbarbara@gmail.com>",
   "repository": {
     "type": "git",
     "url": "https://github.com/gilbarbara/resume"
   },
   "homepage": "http://gilbarbara.github.io/resume/",
+  "dependencies": {
+    "react": "^0.14",
+    "react-dom": "^0.14",
+    "react-pure-render": "^1.0"
+  },
   "devDependencies": {
     "apache-server-configs": "^2.14",
-    "babelify": "^6.1.2",
-    "browser-sync": "^2.7",
-    "browserify": "^10.2.4",
+    "babel-eslint": "^4.1",
+    "babel-polyfill": "^6.0.16",
+    "babel-preset-es2015": "^6.0",
+    "babel-preset-react": "^6.0",
+    "babel-preset-stage-1": "^6.0",
+    "babelify": "^7.2",
+    "browser-sync": "^2.9",
+    "browserify": "^12.0",
     "connect": "^3.4",
-    "connect-history-api-fallback": "^1.1.0",
-    "del": "^1.2",
-    "eslint": "^0.23.0",
-    "eslint-plugin-react": "^2.5.2",
+    "connect-history-api-fallback": "^1.1",
+    "del": "^2.0",
+    "eslint": "^1.8",
+    "eslint-plugin-react": "^3.7",
     "gulp": "^3.9",
-    "gulp-autoprefixer": "^2.3",
-    "gulp-cache": "^0.2",
-    "gulp-changed": "^1.2",
+    "gulp-autoprefixer": "^3.1",
+    "gulp-cache": "^0.4",
+    "gulp-changed": "^1.3",
     "gulp-cssmin": "^0.1",
-    "gulp-eslint": "^0.14",
-    "gulp-filter": "^2.0",
-    "gulp-flatten": "0.0.4",
-    "gulp-gh-pages": "^0.5.2",
-    "gulp-if": "^1.2",
-    "gulp-imagemin": "^2.2",
-    "gulp-load-plugins": "^0.10",
+    "gulp-eslint": "^1.0",
+    "gulp-filter": "^3.0",
+    "gulp-flatten": "0.2",
+    "gulp-gh-pages": "^0.5",
+    "gulp-if": "^2.0",
+    "gulp-imagemin": "^2.4",
+    "gulp-load-plugins": "^1.1",
     "gulp-plumber": "^1.0",
     "gulp-rename": "^1.2",
-    "gulp-sass": "^2.0",
-    "gulp-size": "^1.2",
-    "gulp-tap": "^0.1.3",
-    "gulp-uglify": "^1.2",
-    "gulp-useref": "^1.2",
+    "gulp-sass": "^2.1",
+    "gulp-size": "^2.0",
+    "gulp-tap": "^0.1",
+    "gulp-uglify": "^1.4",
+    "gulp-useref": "^2.0",
     "gulp-util": "^3.0",
-    "jquery": "^2.1.4",
-    "main-bower-files": "^2.8",
-    "merge-stream": "^0.1",
+    "jquery": "^2.1",
+    "main-bower-files": "^2.9",
+    "merge-stream": "^1.0",
     "run-sequence": "^1.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.2",
-    "wiredep": "^2.2"
+    "vinyl-buffer": "^1.0",
+    "vinyl-source-stream": "^1.1",
+    "watchify": "^3.6"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-1"
+    ]
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "ignore": "/bower_components/",
+          "sourceMapRelative": "."
+        }
+      ]
+    ]
   },
   "engines": {
-    "node": ">=0.10.0"
-  },
-  "dependencies": {
-    "react": "^0.13.3"
+    "node": ">=0.12.0"
   }
 }
