--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,8 +1,10 @@
 linters:
   BangFormat:
     enabled: true
-    space_before_bang: true
-    space_after_bang: false
+
+  BemDepth:
+    enabled: true
+    max_elements: 1
 
   BorderZero:
     enabled: true
@@ -59,8 +61,6 @@ linters:
 
   ImportPath:
     enabled: true
-    leading_underscore: false
-    filename_extension: false
 
   Indentation:
     enabled: true
@@ -87,20 +87,39 @@ linters:
   PlaceholderInExtend:
     enabled: true
 
+  PropertyCount:
+    enabled: true
+    include_nested: false
+    max_properties: 15
+
   PropertySortOrder:
     enabled: true
-    ignore_unspecified: false
     separate_groups: true
 
   PropertySpelling:
     enabled: true
     extra_properties: []
+    disabled_properties: []
+
+  PropertyUnits:
+    enabled: true
+    global: [
+      'ch', 'em', 'ex', 'rem',                 # Font-relative lengths
+      'cm', 'in', 'mm', 'pc', 'pt', 'px', 'q', # Absolute lengths
+      'vh', 'vw', 'vmin', 'vmax',              # Viewport-percentage lengths
+      'deg', 'grad', 'rad', 'turn',            # Angle
+      'ms', 's',                               # Duration
+      'Hz', 'kHz',                             # Frequency
+      'dpi', 'dpcm', 'dppx',                   # Resolution
+      '%']                                     # Other
+    properties: {}
+
+  PseudoElement:
+      enabled: false
 
   QualifyingElement:
     enabled: true
-    allow_element_with_attribute: false
     allow_element_with_class: true
-    allow_element_with_id: false
 
   SelectorDepth:
     enabled: true
@@ -108,10 +127,11 @@ linters:
 
   SelectorFormat:
     enabled: true
-    convention: hyphenated_BEM # or 'hyphenated_lowercase', or 'snake_case', or 'camel_case', or a regex pattern
+    convention: hyphenated_BEM # or 'strict_BEM', or 'hyphenated_BEM', or 'snake_case', or 'camel_case', or a regex pattern
 
   Shorthand:
     enabled: true
+    allowed_shorthands: [1, 2, 3]
 
   SingleLinePerProperty:
     enabled: true
@@ -130,14 +150,18 @@ linters:
   SpaceAfterPropertyName:
     enabled: true
 
+  SpaceAfterVariableName:
+    enabled: true
+
+  SpaceAroundOperator:
+    enabled: true
+    style: one_space # or 'at_least_one_space', or 'no_space'
+
   SpaceBeforeBrace:
     enabled: true
-    style: space
-    allow_single_line_padding: false
 
   SpaceBetweenParens:
     enabled: true
-    spaces: 0
 
   StringQuotes:
     enabled: true
@@ -146,8 +170,11 @@ linters:
   TrailingSemicolon:
     enabled: true
 
-  TrailingZero:
+  TrailingWhitespace:
     enabled: true
+
+  TransitionAll:
+    enabled: false
 
   UnnecessaryMantissa:
     enabled: true
@@ -160,9 +187,6 @@ linters:
 
   UrlQuotes:
     enabled: true
-
-  VariableForProperty:
-    enabled: false
 
   VendorPrefix:
     enabled: true
