--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gilbarbara.github.io",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": "Gil Barbara <gilbarbara@gmail.com>",
   "repository": {
     "type": "git",
@@ -8,59 +8,92 @@
   },
   "homepage": "http://gilbarbara.github.io/resume/",
   "dependencies": {
+    "classlist-polyfill": "^1.0.2",
+    "classnames": "^2.2",
+    "core-decorators": "^0.11",
+    "core-js": "^2.1",
+    "fbjs": "^0.7",
     "react": "^0.14",
     "react-dom": "^0.14",
     "react-pure-render": "^1.0"
   },
   "devDependencies": {
     "apache-server-configs": "^2.14",
-    "babel-eslint": "^4.1",
-    "babel-polyfill": "^6.0.16",
-    "babel-preset-es2015": "^6.0",
-    "babel-preset-react": "^6.0",
-    "babel-preset-stage-1": "^6.0",
+    "babel-eslint": "^5.0",
+    "babel-plugin-add-module-exports": "^0.1",
+    "babel-plugin-react-transform": "^2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3",
+    "babel-preset-es2015": "^6.6",
+    "babel-preset-react": "^6.5",
+    "babel-preset-stage-1": "^6.5",
     "babelify": "^7.2",
-    "browser-sync": "^2.9",
-    "browserify": "^12.0",
+    "browser-sync": "^2.11",
+    "browserify": "^13.0",
+    "browserify-shim": "^3.8",
     "connect": "^3.4",
-    "connect-history-api-fallback": "^1.1",
-    "del": "^2.0",
-    "eslint": "^1.8",
-    "eslint-plugin-react": "^3.7",
+    "debowerify": "^1.3",
+    "del": "^2.2",
+    "eslint": "^2.2",
+    "eslint-config-airbnb": "^6.0",
+    "eslint-plugin-jsdoc": "^2.3",
+    "eslint-plugin-react": "^4.1",
     "gulp": "^3.9",
     "gulp-autoprefixer": "^3.1",
     "gulp-cache": "^0.4",
     "gulp-changed": "^1.3",
     "gulp-cssmin": "^0.1",
-    "gulp-eslint": "^1.0",
-    "gulp-filter": "^3.0",
+    "gulp-eslint": "^2.0",
+    "gulp-filter": "^4.0",
     "gulp-flatten": "0.2",
     "gulp-gh-pages": "^0.5",
     "gulp-if": "^2.0",
     "gulp-imagemin": "^2.4",
-    "gulp-load-plugins": "^1.1",
-    "gulp-plumber": "^1.0",
+    "gulp-load-plugins": "^1.2",
+    "gulp-plumber": "^1.1",
     "gulp-rename": "^1.2",
-    "gulp-sass": "^2.1",
+    "gulp-sass": "^2.2",
     "gulp-size": "^2.0",
     "gulp-tap": "^0.1",
-    "gulp-uglify": "^1.4",
-    "gulp-useref": "^2.0",
+    "gulp-uglify": "^1.5",
+    "gulp-useref": "^3.0",
     "gulp-util": "^3.0",
-    "jquery": "^2.1",
-    "main-bower-files": "^2.9",
+    "livereactload": "^2.2",
     "merge-stream": "^1.0",
+    "react-proxy": "^1.1",
     "run-sequence": "^1.1",
     "vinyl-buffer": "^1.0",
     "vinyl-source-stream": "^1.1",
-    "watchify": "^3.6"
+    "watchify": "^3.7"
   },
   "babel": {
     "presets": [
       "es2015",
       "react",
       "stage-1"
-    ]
+    ],
+    "plugins": [
+      "add-module-exports",
+      "transform-decorators-legacy"
+    ],
+    "env": {
+      "development": {
+        "plugins": [
+          [
+            "react-transform",
+            {
+              "transforms": [
+                {
+                  "transform": "livereactload/babel-transform",
+                  "imports": [
+                    "react"
+                  ]
+                }
+              ]
+            }
+          ]
+        ]
+      }
+    }
   },
   "browserify": {
     "transform": [
@@ -69,11 +102,26 @@
         {
           "ignore": "/bower_components/",
           "sourceMapRelative": "."
-        }
+        },
+        "browserify-shim",
+        "debowerify",
+        [
+          "envify",
+          {
+            "_": "purge"
+          }
+        ]
       ]
     ]
   },
+  "browser": {
+    "jquery": "./bower_components/jquery/dist/jquery.js"
+  },
+  "browserify-shim": {
+    "jquery": "$"
+  },
   "engines": {
-    "node": ">=0.12.0"
+    "node": ">=5.0.0",
+    "npm": ">=3.0.0"
   }
 }
